# AI-Playground

./: .gitignore  .pre-commit-config.yaml  readme.md
.github/workflows/: build-installer.yml  eslint-prettier.yml  trivy.yml
WebUI/: package-lock.json  package.json
WebUI/electron/: localWebChannelServer.ts  localWebChatAppHtml.ts  main.ts  mcp.ts  preload.ts  remoteUpdates.ts  types.d.ts  util.ts
WebUI/electron/subprocesses/: apiServiceRegistry.ts  comfyUIBackendService.ts  homeAgentBackendService.ts  llamaCppBackendService.ts  openVINOBackendService.ts  processLifecycle.ts  qwen3TtsBackendService.ts  service.ts  tools.ts
WebUI/electron/test/: mcp.test.ts
WebUI/src/: App.vue  env.d.ts
WebUI/src/components/: BackendOptions.vue  ChatMcpToolsDisplay.vue  ChatReasoningDisplay.vue  ChatTtsToolResult.vue  ContextualHelpLayer.vue  DownloadDialog.vue  InstallationManagement.vue  LocalWebSetupSteps.vue  McpServerDialog.vue  PhisonAidaptivOptions.vue  PresetSelector.vue  PresetWorkflowModelsDialog.vue  ProgressBar.vue  SettingsBasic.vue  SettingsBuiltinTools.vue  SettingsChat.vue  SetupWizard.vue  VariantSelector.vue
WebUI/src/lib/: loopbackAuth.ts  ttsAudioFileName.test.ts  ttsAudioFileName.ts  utils.ts
WebUI/src/types/: mcp.ts
WebUI/src/views/: Chat.vue  (+1 more)
comfyui-deps/: pyproject-flexible-venv.toml  pyproject.toml
qwen3-tts/: pyproject.toml  tts_engine.py  web_api.py
service/: comfyui_downloader.py  exceptions.py  model_download_adpater.py  model_downloader.py  requirements-xpu.txt  utils.py  web_api.py
service/tests/: test_model_downloader.py
(+37 files in other folders)
