[project]
name = "aipg-qwen3-tts"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
  "Flask",
  "flask-cors",
  "qwen-tts",
  "soundfile",
  "numpy",
  "torch>=2.12.0",
  "torchaudio>=2.11.0",
  "triton-xpu>=3.6.0; sys_platform == 'win32' or sys_platform == 'linux'",
]

[tool.uv]
python-preference = "only-managed"
link-mode = "clone"
no-build = true
index-strategy = "unsafe-best-match"
required-environments = [
  "sys_platform == 'win32'",
  "sys_platform == 'darwin'",
  "sys_platform == 'linux'",
]
override-dependencies = [
  "torch>=2.12.0",
  "torchaudio>=2.11.0",
]

[tool.uv.pip]
torch-backend = "xpu"

[tool.uv.sources]
torch = [{ index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
         { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
         { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
              { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
              { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
